changes in html

--- a/form.html
+++ b/form.html
@@ -10,7 +10,7 @@
   <body>
     <section>
       <h3>Entre em contato</h3>
-      <p>Retorno em aproximandamente 48 horas</p>
+      <p>Retorno em aproximandamente 48hs</p>
       <form>
         <input type="text" name="" placeholder="Nome">
         <input type="email" placeholder="Email">
